[package]
name = "buoy_batch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mysql = "*"

serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"

dotenv = "0.15.0"

rand = "0.8.4"


chrono = "0.4"

csv = "1.1"

cronjob = "0.3.17"

[dependencies.redis]
version = "*"